--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Citizen Science App</string>
-    <string name="title_activity_test_delete">TestDelete</string>
     <string name="send">Send</string>
     <string name="check_internet_conn">Check your internet connection!</string>
+    <string name="data_sent">Data sent successfully</string>
 </resources>
