ask user to open location service if it is closed

--- a/app/src/main/res/values-tr-rTR/strings.xml
+++ b/app/src/main/res/values-tr-rTR/strings.xml
@@ -3,11 +3,13 @@
     <string name="app_name">Citizen Science App</string>
     <string name="send">Gönder</string>
     <string name="ok">Tamam</string>
+    <string name="open">Aç</string>
+    <string name="cancel">İptal</string>
     <string name="check_internet_conn">İnternet bağlantınızı kontrol ediniz!</string>
     <string name="data_sent">Veriler başarıyla gönderildi</string>
     <string name="measurement">Ölçüm değeri</string>
     <string name="location">Konum Bilgisi</string>
-    <string name="location_optional">Konum Bilgisi (isteğe bağlı)</string>
+    <string name="location_optional">Konum bilgisi (isteğe bağlı)</string>
     <string name="additional_info">Ek bilgi</string>
     <string name="additional_info_optional">Ek bilgi (isteğe bağlı)</string>
     <string name="hacettepe">Hacettepe</string>
@@ -19,4 +21,7 @@
 
     <string name="location_needed">Konum İzni Gerekmektedir</string>
     <string name="location_needed_detail">Bu uygulama konum iznine ihtiyaç duymaktadır, lütfen konum özelliğini kullanabilmek için kabul ediniz.</string>
+    <string name="open_location_service">Konum servisi kapalı durumda, lütfen açınız.</string>
+    <string name="looking_for_gps">GPS konumu aranıyor...</string>
+
 </resources>
