--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
-    <string name="app_name">Citizen Science App</string>
+    <string name="app_name">Uzungöl Water Quality</string>
+    <string name="project_name">Uzungölün Su Kalitesinin İzlenmesinde Sivil Bilim Yaklaşımının İncelenmesi</string>
     <string name="send">Send</string>
     <string name="ok">OK</string>
     <string name="open">Open</string>
@@ -14,13 +15,16 @@
     <string name="hacettepe">Hacettepe</string>
     <string name="please_wait">Please wait</string>
     <string name="select_property">Select an observed property from the list to send observation.</string>
-    <string name="app_info">Information about application*</string>
-    <string name="continue_">Continue</string>
+    <string name="app_info">Projenin temel amacı, Uzungöl’ün  su kalitesinin izlenmesi amacıyla sivil bilim yaklaşımının uygulanmasıdır. Bu amaca ulaşmak için öncelikle sivil bilim gönüllüleri tarafından su kalite ölçümleri yapılabilecek ölçüm noktaları belirlenecektir. İkinci olarak, göl için kritik olan ve aynı zamanda sivil bilim gönüllüleri tarafından kolay bir şekilde ölçülebilecek su kalite parametreleri belirlenecektir. </string>
     <string name="measurement_cannot_empty">Measurement value cannot be empty!</string>
 
     <string name="location_needed">Location Permission Needed</string>
     <string name="location_needed_detail">This app needs the Location permission, please accept to use location functionality</string>
     <string name="open_location_service">Location service is closed, please open it.</string>
     <string name="looking_for_gps">Looking for GPS location...</string>
+    <string name="continue_">Continue</string>
+    <string name="cannot_get_location">Cannot get your location!</string>
+    <string name="person_name">Person/Foundation Name</string>
+    <string name="enter_your_name">Please enter your name</string>
 
 </resources>
